--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -14,6 +14,6 @@
   
 
   <ion-fab bottom right>
-    <button ion-fab mini><ion-icon name="add"></ion-icon></button>
+    <button ion-fab mini (click) ="Adiciona()"><ion-icon name="add"></ion-icon></button>
   </ion-fab>
 </ion-content>
