--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -9,6 +9,8 @@
   <ion-item *ngFor="let a of alunos" (click)="seleciona(a)">
     <h1>{{a.nome}}</h1>
     <h6>Curso: {{a.curso}}</h6>
+    <h6>ID: {{a.id}}</h6>
+    <h6>teste: {{a.teste}}</h6>
   </ion-item>
 </ion-list>
   
