--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -17,4 +17,8 @@
   <ion-fab bottom right>
     <button ion-fab mini (click) ="Adiciona()"><ion-icon name="add"></ion-icon></button>
   </ion-fab>
+  <button ion-button full color="dark" (click)="random()"> Sortear</button>
+  <ion-item>
+  <h1>{{ sorteado }}</h1>
+  </ion-item>
 </ion-content>
